feat: agregar nuevo proveedor de datos de equipos de api externa, además de agregar filtrado de ligas especificas en el response de la api externa